# cmake_examples

./: .gitignore  note.txt  outline.txt  ref.txt
basic_single_binary/: CMakeLists.txt  Makefile
basic_static_library/: CMakeLists.txt  Makefile
basic_static_library/hello/: Hello.cpp  World.cpp
basic_static_library/hello/public/: World.h
basic_static_library/main/: main.cpp
proj1/subbinary/: CMakeLists.txt
proj1/sublibrary2/: CMakeLists.txt
proj3/: CMakeLists.txt
proj3/main/: CMakeLists.txt
proj4/: CMakeLists.txt  Makefile
proj4/static_lib2/: CMakeLists.txt
proj5/: CMakeLists.txt  Proj5Config.cmake.in
proj5/cmake/: StaticLib1Config.cmake.in
proj5/main/: CMakeLists.txt  main.cpp
proj5/static_lib1/: CMakeLists.txt
proj6/: CMakeLists.txt  Makefile
proj6/main/: CMakeLists.txt  main.cpp
proj6/static_lib2/: CMakeLists.txt
proj7/: CMakeLists.txt  Makefile
proj7/main/: CMakeLists.txt  main.cpp
seastar/: CMakeLists.txt  Makefile
seastar/cmake/: SeastarConfig.cmake.in
seastar/main/: CMakeLists.txt
seastar/seastar/: CMakeLists.txt
seastar/static_lib1/: CMakeLists.txt
subprojects_2/: CMakeLists.txt  Makefile
subprojects_2/interface_lib1/: CMakeLists.txt
subprojects_2/main/: CMakeLists.txt
subprojects_2/static_lib1/: CMakeLists.txt
subprojects_2/sublibrary1/: CMakeLists.txt
subprojects_3/: CMakeLists.txt
subprojects_3/interface_lib1/: CMakeLists.txt
subprojects_3/main/: main.cpp
subprojects_3/static_lib1/: CMakeLists.txt
subprojects_4/: CMakeLists.txt  Makefile
subprojects_4/interface_lib1/: sublib2.h
subprojects_4/main/: CMakeLists.txt  main.cpp
subprojects_4/static_lib1/: sublib1.cpp
subprojects_4/static_lib2/: CMakeLists.txt  sublib2.cpp
